fixed loading screen alignment

--- a/src/pages/loading/loading.styles.css
+++ b/src/pages/loading/loading.styles.css
@@ -1,8 +1,8 @@
 
 #loading-screen .circle{
-    width: 300px;
-    height: 300px;
-    border: 30px dotted  rgb(30 41 59 / var(--tw-border-opacity));
+    width: 250px;
+    height: 250px;
+    border: 15px dotted  rgb(30 41 59 / var(--tw-border-opacity));
     border-radius: 50%;
     padding:15px;    
     
